[package]
name = "pleme-database"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Database utilities library for Pleme platform - connection pooling, transactions, repository pattern"
repository = "https://github.com/pleme-io/pleme-database"
homepage = "https://github.com/pleme-io/pleme-database"
readme = "README.md"
keywords = ["database", "postgres", "connection-pool", "repository", "sqlx"]
categories = ["database"]

[dependencies]
sqlx = { version = "0.8", default-features = false, features = ["chrono", "json", "macros", "migrate", "postgres", "runtime-tokio", "uuid"], optional = true }
redis = { version = "0.24", features = ["connection-manager", "streams", "tokio-comp"], optional = true }
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.11", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
pleme-error = { version = "0.1", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["postgres"]
postgres = ["sqlx"]
cache = ["redis"]
errors = ["pleme-error"]
full = ["postgres", "cache", "errors"]


